fix right align navbar and some other stuff

--- a/static/style/gcshome.css
+++ b/static/style/gcshome.css
@@ -1,21 +1,3 @@
 body {
     font-family:Roboto;
 }
-
-input.giantbuttonleft {
-    font-family:Roboto;
-    position:absolute;
-    left:100px
-    top:150px;
-}
-
-input.giantbuttonright {
-    position:absolute;
-    right:100px;
-    top:150px;
-    padding-right:30px;
-}
-
-.nav a {
-    font-size:1.8em !important;
-}
